--- a/projet-dev-mobile/src/app/tab1/tab1.page.html
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.html
@@ -1,17 +1,23 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>
-      Tab 1
-    </ion-title>
+  <ion-toolbar color='primary'>
+
+    <ion-searchbar color="light" class="ion-searchtext" cancelButtonText="Annuler"
+                   placeholder="Rechercher"
+                   [showCancelButton]="true"
+                   (ionInput)="onSearchInput($event)"
+                   (ionCancel)="onSearchCancel($event)">
+    </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">Tab 1</ion-title>
-    </ion-toolbar>
   </ion-header>
+  <ion-toolbar></ion-toolbar>
+  <div class="padding">
 
-  <app-explore-container name="Tab 1 page"></app-explore-container>
+
+
+  </div>
+
 </ion-content>
