--- a/projet-dev-mobile/src/app/tabs/tabs.page.html
+++ b/projet-dev-mobile/src/app/tabs/tabs.page.html
@@ -1,30 +1,28 @@
-<ion-tabs>
-
-  <ion-tab-bar slot="bottom">
+<ion-tabs >
+    <ion-tab-bar id="myTabBar" slot="bottom">
     <ion-tab-button tab="tab1">
-      <ion-icon name="triangle"></ion-icon>
+      <fa-icon icon="search"></fa-icon>
       <ion-label>Rechercher</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab2">
-      <ion-icon name="ellipse"></ion-icon>
+      <fa-icon icon="users"></fa-icon>
       <ion-label>Contacts</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab3">
-      <ion-icon name="square"></ion-icon>
+      <fa-icon icon="heart"></fa-icon>
       <ion-label>Favoris</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab4">
-      <ion-icon name="triangle"></ion-icon>
+      <fa-icon icon="comments"></fa-icon>
       <ion-label>Messages</ion-label>
     </ion-tab-button>
 
     <ion-tab-button tab="tab5">
-      <ion-icon name="triangle"></ion-icon>
+      <fa-icon icon="user">Mon profil</fa-icon>
       <ion-label>Mon profil</ion-label>
     </ion-tab-button>
   </ion-tab-bar>
-
 </ion-tabs>
