--- a/projet-dev-mobile/src/app/registration/registration.page.html
+++ b/projet-dev-mobile/src/app/registration/registration.page.html
@@ -3,19 +3,19 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Register</ion-title>
+    <ion-title>S'inscrire</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
   <form>
     <ion-item lines="full">
-      <ion-label position="floating">First name</ion-label>
+      <ion-label position="floating">Nom</ion-label>
       <ion-input type="text" required></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Last name</ion-label>
+      <ion-label position="floating">Prénom</ion-label>
       <ion-input type="text" required></ion-input>
     </ion-item>
 
@@ -25,13 +25,13 @@
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Password</ion-label>
+      <ion-label position="floating">Mot de passe</ion-label>
       <ion-input type="password" required></ion-input>
     </ion-item>
 
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="danger" expand="block">Sign Up</ion-button>
+        <ion-button type="submit" color="secondary" expand="block">S'inscrire</ion-button>
       </ion-col>
     </ion-row>
   </form>
