--- a/projet-dev-mobile/src/app/tab5/tab5.page.html
+++ b/projet-dev-mobile/src/app/tab5/tab5.page.html
@@ -1,9 +1,171 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>tab5</ion-title>
+<ion-header [translucent]="true">
+  <ion-toolbar color='primary'>
+    <ion-searchbar color="light" class="ion-searchtext" cancelButtonText="Annuler"
+                   placeholder="Rechercher"
+                   [showCancelButton]="true"
+                   (ionInput)="onSearchInput($event)"
+                   (ionCancel)="onSearchCancel($event)">
+    </ion-searchbar>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <ion-header collapse="condense">
+  </ion-header>
+  <ion-toolbar></ion-toolbar>
+  <form>
+    <ion-item lines="none">
+      <ion-label>Photo de profil</ion-label>
+    </ion-item>
+    <ion-item lines="full">
+      <span>
+         <ion-icon id="delete" name="trash-outline"></ion-icon>
+         <IonThumbnail slot="start">
+           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"/>
+         </IonThumbnail>
+      </span>
 
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Nom</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Prénom</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Ville</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Poste</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Société</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="stacked">Date de naissance</ion-label>
+      <ion-input type="date"></ion-input>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label>Photo de ma carte de visite</ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <span>
+         <ion-icon id="delete" name="trash-outline"></ion-icon>
+         <IonThumbnail slot="start">
+           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"/>
+         </IonThumbnail>
+      </span>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label>Etes vous  à la recherche d'un emploi ?</ion-label>
+      <ion-checkbox color="primary"></ion-checkbox>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Type de contrat</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Emploi recherché</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Localisation</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Rayon</ion-label>
+      <ion-input type="number"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Disponibilité</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">//PARTIE IMPORT CV//</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="none">
+      <ion-label>Mon CV</ion-label>
+    </ion-item>
+
+    <ion-item lines="full">
+      <span>
+         <ion-icon id="delete" name="trash-outline"></ion-icon>
+         <IonThumbnail slot="start">
+           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"/>
+         </IonThumbnail>
+      </span>
+
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label>Etes vous  à la recherche d'un logement ?</ion-label>
+      <ion-checkbox id="box" color="primary">Oui</ion-checkbox>
+      <ion-checkbox color="primary">Non</ion-checkbox>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Transaction</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Type</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Localisation</ion-label>
+      <ion-input type="text"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Rayon</ion-label>
+      <ion-input type="number"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Surface min</ion-label>
+      <ion-input type="number"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Nombre de pièce(s) min</ion-label>
+      <ion-input type="number"></ion-input>
+    </ion-item>
+
+    <ion-item lines="full">
+      <ion-label position="floating">Prix min</ion-label>
+      <ion-input type="number"></ion-input>
+    </ion-item>
+
+    <ion-row>
+      <ion-col>
+        <ion-button type="submit" color="secondary" expand="block">Enregistrer</ion-button>
+        <ion-button [routerLink]="['/login']" type="submit" color="medium" expand="block">Déconnexion</ion-button>
+      </ion-col>
+    </ion-row>
+
+  </form>
 </ion-content>
