--- a/projet-dev-mobile/src/app/tab5/tab5.page.html
+++ b/projet-dev-mobile/src/app/tab5/tab5.page.html
@@ -15,148 +15,157 @@
   <ion-toolbar></ion-toolbar>
   <form>
     <ion-item lines="none">
-      <ion-label>Photo de profil</ion-label>
+      <ion-label class="my-label">Photo de profil</ion-label>
     </ion-item>
     <ion-item lines="full">
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
-         <IonThumbnail slot="start">
-           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"/>
-         </IonThumbnail>
+         <ion-thumbnail slot="start">
+           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
+         </ion-thumbnail>
       </span>
 
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Nom</ion-label>
+      <ion-label class="my-label" position="floating">Nom</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Prénom</ion-label>
+      <ion-label class="my-label" position="floating">Prénom</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Ville</ion-label>
+      <ion-label class="my-label" position="floating">Ville</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Poste</ion-label>
+      <ion-label class="my-label" position="floating">Poste</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Société</ion-label>
+      <ion-label class="my-label" position="floating">Société</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="stacked">Date de naissance</ion-label>
+      <ion-label class="my-label" position="stacked">Date de naissance</ion-label>
       <ion-input type="date"></ion-input>
     </ion-item>
 
     <ion-item lines="none">
-      <ion-label>Photo de ma carte de visite</ion-label>
+      <ion-label class="my-label">Photo de ma carte de visite</ion-label>
     </ion-item>
 
     <ion-item lines="full">
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
-         <IonThumbnail slot="start">
-           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"/>
-         </IonThumbnail>
+         <ion-thumbnail slot="start">
+           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
+         </ion-thumbnail>
       </span>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label>Etes vous  à la recherche d'un emploi ?</ion-label>
-      <ion-checkbox color="primary"></ion-checkbox>
+      <span>
+      <ion-label class="my-label">Etes-vous à la recherche d'un emploi ?&nbsp;&nbsp;&nbsp;</ion-label>
+      </span>
+      <ion-label>O</ion-label>
+      <ion-checkbox class="size" id="box" color="primary" (click)="falseFormControl.setValue(false)" [formControl]="trueFormControl"></ion-checkbox>
+      <ion-label>N</ion-label>
+      <ion-checkbox class="size" color="primary" (click)="trueFormControl.setValue(false)" [formControl]="falseFormControl"></ion-checkbox>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Type de contrat</ion-label>
+      <ion-label class="my-label" position="floating">Type de contrat</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Emploi recherché</ion-label>
+      <ion-label class="my-label" position="floating">Emploi recherché</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Localisation</ion-label>
+      <ion-label class="my-label" position="floating">Localisation</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Rayon</ion-label>
+      <ion-label class="my-label" position="floating">Rayon</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Disponibilité</ion-label>
+      <ion-label class="my-label" position="floating">Disponibilité</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">//PARTIE IMPORT CV//</ion-label>
+      <ion-label class="my-label" position="floating">//PARTIE IMPORT CV//</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="none">
-      <ion-label>Mon CV</ion-label>
+      <ion-label class="my-label">Mon CV</ion-label>
     </ion-item>
 
     <ion-item lines="full">
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
-         <IonThumbnail slot="start">
-           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y"/>
-         </IonThumbnail>
+         <ion-thumbnail slot="start">
+           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
+         </ion-thumbnail>
       </span>
 
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label>Etes vous  à la recherche d'un logement ?</ion-label>
-      <ion-checkbox id="box" color="primary">Oui</ion-checkbox>
-      <ion-checkbox color="primary">Non</ion-checkbox>
+      <span>
+      <ion-label class="my-label">Etes-vous à la recherche d'un logement ?&nbsp;</ion-label>
+      </span>
+      <ion-label>O</ion-label>
+      <ion-checkbox class="size" id="box" color="primary" (click)="falseFormControl.setValue(false)" [formControl]="trueFormControl"></ion-checkbox>
+      <ion-label>N</ion-label>
+      <ion-checkbox class="size" color="primary" (click)="trueFormControl.setValue(false)" [formControl]="falseFormControl"></ion-checkbox>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Transaction</ion-label>
+      <ion-label class="my-label" position="floating">Transaction</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Type</ion-label>
+      <ion-label class="my-label" position="floating">Type</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Localisation</ion-label>
+      <ion-label class="my-label" position="floating">Localisation</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Rayon</ion-label>
+      <ion-label class="my-label" position="floating">Rayon</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Surface min</ion-label>
+      <ion-label class="my-label" position="floating">Surface min</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Nombre de pièce(s) min</ion-label>
+      <ion-label class="my-label" position="floating">Nombre de pièce(s) min</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label position="floating">Prix min</ion-label>
+      <ion-label class="my-label" position="floating">Prix min</ion-label>
       <ion-input type="number"></ion-input>
     </ion-item>
 
