--- a/projet-dev-mobile/src/app/tab1/tab1.page.scss
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.scss
@@ -1,6 +1,6 @@
-ion-content {
-  --ion-background-color: linear-gradient(#00a3d9, #fff);
-}
+//ion-content {
+//  --ion-background-color: linear-gradient(#00a3d9, #fff);
+//}
 
 
 ion-header{
