--- a/projet-dev-mobile/src/app/login/login.page.scss
+++ b/projet-dev-mobile/src/app/login/login.page.scss
@@ -32,7 +32,7 @@ ion-button.connexion{
   border-radius: 12px;
 }
 
-.inscription{
+ion-button.inscription{
   background-color: #000;
   border-radius: 12px;
 }
