--- a/projet-dev-mobile/src/app/tab5/tab5.page.html
+++ b/projet-dev-mobile/src/app/tab5/tab5.page.html
@@ -65,7 +65,7 @@
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
          <ion-thumbnail slot="start">
-           <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
+           <img id="mini" src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
          </ion-thumbnail>
       </span>
     </ion-item>
