--- a/projet-dev-mobile/src/app/login/login.page.scss
+++ b/projet-dev-mobile/src/app/login/login.page.scss
@@ -27,12 +27,12 @@ ion-title{
 ion-item{
   color: #00a3d9;
 }
-ion-button.connexion{
+.connexion{
   background-color: #00a3d9;
   border-radius: 12px;
 }
 
-ion-button.inscription{
+.inscription{
   background-color: #000;
   border-radius: 12px;
 }
