Mise à jour affichage

--- a/projet-dev-mobile/src/app/login/login.page.scss
+++ b/projet-dev-mobile/src/app/login/login.page.scss
@@ -32,7 +32,7 @@ ion-button.connexion{
   border-radius: 12px;
 }
 
-.inscription{
+ion-button.inscription{
   background-color: #000;
   border-radius: 12px;
 }
@@ -44,5 +44,4 @@ ion-card-content{
     color:#00a3d9;
     text-align: center;
   }
-
 }
