--- a/projet-dev-mobile/src/app/login/login.page.html
+++ b/projet-dev-mobile/src/app/login/login.page.html
@@ -1,6 +1,6 @@
-
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+ <ion-header collapse="condense">
+  </ion-header>
+ <ion-content [fullscreen]="true">
   <ion-toolbar></ion-toolbar>
   <div class="padding">
     <div class="logo">
