--- a/projet-dev-mobile/src/app/tab1/tab1.page.html
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.html
@@ -1,10 +1,9 @@
-
-
 <ion-header [translucent]="true">
-  <ion-toolbar color='primary'>
-    <ion-searchbar color="light" class="ion-searchtext" cancelButtonText="Annuler"
-                   placeholder="Rechercher"
-                   [showCancelButton]="true"
+  <ion-toolbar color="primary">
+    <ion-searchbar color="light" class="ion-searchtext"
+                   cancelButtonText="Annuler"
+                   placeholder="Rechercher un profil"
+                   showCancelButton="focus"
                    (ionInput)="onSearchInput($event)"
                    (ionCancel)="onSearchCancel($event)">
     </ion-searchbar>
@@ -13,11 +12,61 @@
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense">
+    <ion-title>0 profil</ion-title>
   </ion-header>
   <div class="padding">
-
-
-
+    <ion-list>
+      <ion-item>
+        <ion-avatar>
+          <img alt="photo" src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>Ludivine HISLER</h2>
+          <p>Responsable Marketing</p>
+          <p>57000 Metz</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-avatar>
+          <img alt="photo" src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>Ludivine HISLER</h2>
+          <p>Responsable Marketing</p>
+          <p>57000 Metz</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-avatar>
+          <img alt="photo" src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>Ludivine HISLER</h2>
+          <p>Responsable Marketing</p>
+          <p>57000 Metz</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-avatar>
+          <img alt="photo" src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>Ludivine HISLER</h2>
+          <p>Responsable Marketing</p>
+          <p>57000 Metz</p>
+        </ion-label>
+      </ion-item>
+      <ion-item>
+        <ion-avatar>
+          <img alt="photo" src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2>Ludivine HISLER</h2>
+          <p>Responsable Marketing</p>
+          <p>57000 Metz</p>
+        </ion-label>
+      </ion-item>
+    </ion-list>
   </div>
-
 </ion-content>
+
