--- a/projet-dev-mobile/src/app/tab5/tab5.page.html
+++ b/projet-dev-mobile/src/app/tab5/tab5.page.html
@@ -28,17 +28,17 @@
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Nom</ion-label>
+      <ion-label class="my-label" position="floating"><strong>Nom:</strong> Schmitt</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Prénom</ion-label>
+      <ion-label class="my-label" position="floating"><strong>Prénom :</strong> Alexandre</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
     <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Ville</ion-label>
+      <ion-label class="my-label" position="floating"><strong>Ville :</strong> Farebersviller</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
 
