--- a/projet-dev-mobile/src/app/registration/registration.page.html
+++ b/projet-dev-mobile/src/app/registration/registration.page.html
@@ -11,7 +11,7 @@
   <form [formGroup]="validationsForm" (ngSubmit)="onSubmit(validationsForm.value)">
     <ion-item>
       <ion-label position="floating" color="primary">Nom</ion-label>
-      <ion-input type="text" formControlName="name"></ion-input>
+      <ion-input  type="text" formControlName="name"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validationMessages.name">
@@ -22,7 +22,7 @@
     </div>
     <ion-item>
       <ion-label position="floating" color="primary">Prénom</ion-label>
-      <ion-input type="text" formControlName="lastname"></ion-input>
+      <ion-input  type="text" formControlName="lastname"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validationMessages.lastname">
@@ -33,7 +33,7 @@
     </div>
     <ion-item>
       <ion-label position="floating" color="primary">Email</ion-label>
-      <ion-input type="text" formControlName="email"></ion-input>
+      <ion-input   type="text" formControlName="email"></ion-input>
     </ion-item>
     <div class="validation-errors">
       <ng-container *ngFor="let validation of validationMessages.email">
@@ -56,7 +56,7 @@
     <div formGroupName="matchingPasswords">
       <ion-item>
         <ion-label position="floating" color="primary">Mot de passe</ion-label>
-        <ion-input type="password" formControlName="password"></ion-input>
+        <ion-input  type="password" formControlName="password"></ion-input>
       </ion-item>
       <div class="validation-errors">
         <ng-container *ngFor="let validation of validationMessages.password">
@@ -87,7 +87,7 @@
     </div>
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="secondary" expand="block" [disabled]="!validationsForm.valid" (click)="saveUser()">S'inscrire</ion-button>
+        <ion-button type="submit" color="secondary" expand="block" [disabled]="!validationsForm.valid" (click)="addUser(validationsForm.value)" >S'inscrire</ion-button>
         <ion-button [routerLink]="['/login']" type="submit" color="medium" expand="block">Annuler</ion-button>
       </ion-col>
     </ion-row>
