--- a/projet-dev-mobile/src/app/tab1/tab1.page.html
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.html
@@ -11,62 +11,25 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-title>0 profil</ion-title>
+  <ion-header collapse="condense" *ngFor="let number of numberContact">
+    <ion-title>{{number.numberUser}} profil</ion-title>
   </ion-header>
+
+
   <div class="padding">
-    <ion-list>
+    <ion-list *ngFor="let user of users">
+
       <ion-item>
         <ion-avatar>
           <img alt="photo" src="assets/img/avatar.png">
         </ion-avatar>
         <ion-label>
-          <h2>Ludivine HISLER</h2>
+          <h2> {{user.nom}} {{user.prenom}}  </h2>
           <p>Responsable Marketing</p>
-          <p>57000 Metz</p>
+          <p>57000 Metz </p>
         </ion-label>
       </ion-item>
-      <ion-item>
-        <ion-avatar>
-          <img alt="photo" src="assets/img/avatar.png">
-        </ion-avatar>
-        <ion-label>
-          <h2>Ludivine HISLER</h2>
-          <p>Responsable Marketing</p>
-          <p>57000 Metz</p>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-avatar>
-          <img alt="photo" src="assets/img/avatar.png">
-        </ion-avatar>
-        <ion-label>
-          <h2>Ludivine HISLER</h2>
-          <p>Responsable Marketing</p>
-          <p>57000 Metz</p>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-avatar>
-          <img alt="photo" src="assets/img/avatar.png">
-        </ion-avatar>
-        <ion-label>
-          <h2>Ludivine HISLER</h2>
-          <p>Responsable Marketing</p>
-          <p>57000 Metz</p>
-        </ion-label>
-      </ion-item>
-      <ion-item>
-        <ion-avatar>
-          <img alt="photo" src="assets/img/avatar.png">
-        </ion-avatar>
-        <ion-label>
-          <h2>Ludivine HISLER</h2>
-          <p>Responsable Marketing</p>
-          <p>57000 Metz</p>
-        </ion-label>
-      </ion-item>
-    </ion-list>
+</ion-list>
   </div>
 </ion-content>
 
