--- a/projet-dev-mobile/src/app/tab2/tab2.page.scss
+++ b/projet-dev-mobile/src/app/tab2/tab2.page.scss
@@ -1,12 +1,43 @@
-
-
-
 ion-header{
   background-color: #00a3d9;
   padding: 5px;
 }
 
 ion-searchbar{
-  padding-top: 0.5em;
+  margin-top: 10px;
+}
+
+ion-title {
+  background-color: #999;
+  padding: 5px;
+}
+
+ion-content>ion-header>ion-title {
+  padding: 15px;
+  color: white;
+  text-align: left;
+  font-weight: lighter;
+}
+
+ion-thumbnail{
+  margin-bottom:10px;
+  --border-radius : 20%;
+}
+
+.padding {
+  margin-top: 20px;
+  padding-right: 20px;
+}
+
+ion-avatar{
+  margin-right:10px;
+}
+
+ion-label>h2{
+  font-weight: bold;
+}
+
+ion-item{
+  --ion-border-color: black;
 }
 
