--- a/projet-dev-mobile/src/app/tab3/tab3.page.html
+++ b/projet-dev-mobile/src/app/tab3/tab3.page.html
@@ -1,8 +1,9 @@
 <ion-header [translucent]="true">
-  <ion-toolbar color='primary'>
-    <ion-searchbar color="light" class="ion-searchtext" cancelButtonText="Annuler"
-                   placeholder="Rechercher"
-                   [showCancelButton]="true"
+  <ion-toolbar color="primary">
+    <ion-searchbar color="light" class="ion-searchtext"
+                   cancelButtonText="Annuler"
+                   placeholder="Rechercher un profil"
+                   showCancelButton="focus"
                    (ionInput)="onSearchInput($event)"
                    (ionCancel)="onSearchCancel($event)">
     </ion-searchbar>
@@ -10,7 +11,25 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
+  <ion-header collapse="condense" *ngFor="let number of numberContact">
+    <ion-title>{{number.numberFavoris}}  profil</ion-title>
   </ion-header>
 
+
+  <div class="padding">
+    <ion-list *ngFor="let user of users">
+
+      <ion-item>
+        <ion-avatar>
+          <img alt="photo" src="assets/img/avatar.png">
+        </ion-avatar>
+        <ion-label>
+          <h2> {{user.nom}} {{user.prenom}}  </h2>
+          <p>Responsable Marketing</p>
+          <p>57000 Metz </p>
+        </ion-label>
+      </ion-item>
+</ion-list>
+  </div>
 </ion-content>
+
