Mise à jour du formulaire des profils en tab5

--- a/projet-dev-mobile/src/app/tab1/tab1.page.html
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.html
@@ -12,7 +12,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense" *ngFor="let number of numberContact">
-    <ion-title>{{number.numberUser}} profil</ion-title>
+    <ion-title>{{number.numberUser}} profil(s)</ion-title>
   </ion-header>
 
 
