--- a/projet-dev-mobile/src/app/tab2/tab2.page.html
+++ b/projet-dev-mobile/src/app/tab2/tab2.page.html
@@ -12,7 +12,7 @@
 
 <ion-content [fullscreen]="true">
   <ion-header collapse="condense" *ngFor="let number of numberContact">
-    <ion-title>{{number.numberContact}} profil</ion-title>
+    <ion-title>{{number.numberContact}} profil(s)</ion-title>
   </ion-header>
 
 
