--- a/projet-dev-mobile/src/app/tab5/tab5.page.html
+++ b/projet-dev-mobile/src/app/tab5/tab5.page.html
@@ -13,55 +13,78 @@
   <ion-header collapse="condense">
   </ion-header>
   <ion-toolbar></ion-toolbar>
-  <form>
+  <form [formGroup]="validationsForm" (ngSubmit)="onSubmit(validationsForm.value)">
     <ion-item lines="none">
       <ion-label class="my-label">Photo de profil</ion-label>
     </ion-item>
-    <ion-item lines="full">
+    <ion-item lines="none">
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
          <ion-thumbnail slot="start">
            <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
          </ion-thumbnail>
       </span>
-
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating"><strong>Nom:</strong> Schmitt</ion-label>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating"><strong>&nbsp;Nom:</strong> Schmitt</ion-label>
       <ion-input type="text"></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating"><strong>Prénom :</strong> Alexandre</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating"><strong>Ville :</strong> Farebersviller</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Poste</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Société</ion-label>
-      <ion-input type="text"></ion-input>
-    </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="stacked">Date de naissance</ion-label>
-      <ion-input type="date"></ion-input>
     </ion-item>
 
     <ion-item lines="none">
-      <ion-label class="my-label">Photo de ma carte de visite</ion-label>
+      <ion-label class="my-label" position="floating"><strong>&nbsp;Prénom :</strong> Alexandre</ion-label>
+      <ion-input type="text"></ion-input>
     </ion-item>
 
-    <ion-item lines="full">
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating"><strong>&nbsp;Ville :</strong></ion-label>
+      <ion-input type="text" formControlName="town"></ion-input>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validationMessages.town">
+        <div class="error-message" *ngIf="validationsForm.get('town').hasError(validation.type) && (validationsForm.get('town').dirty || validationsForm.get('town').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Poste</ion-label>
+      <ion-input type="text" formControlName="jobName"></ion-input>
+
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validationMessages.jobName">
+        <div class="error-message" *ngIf="validationsForm.get('jobName').hasError(validation.type) && (validationsForm.get('jobName').dirty || validationsForm.get('jobName').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Société</ion-label>
+      <ion-input type="text" formControlName="society"></ion-input>
+    <div class="validation-errors">
+      <ng-container *ngFor="let validation of validationMessages.society">
+        <div class="error-message" *ngIf="validationsForm.get('society').hasError(validation.type) && (validationsForm.get('society').dirty || validationsForm.get('society').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="stacked">&nbsp;Date de naissance</ion-label>
+      <ion-datetime value="date" display-format="DD MM YYYY" placeholder="jj-mm-aaaaa" min="1900-01-01" max="2021-05-31" formControlName="birthdate"></ion-datetime>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.birthdate">
+        <div class="error-message" *ngIf="validationsForm.get('birthdate').hasError(validation.type) && (validationsForm.get('birthdate').dirty || validationsForm.get('birthdate').touched)">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
+    </ion-item>
+    <ion-item lines="none">
+      <ion-label class="my-label">&nbsp;Photo de ma carte de visite</ion-label>
+    </ion-item>
+
+    <ion-item lines="none">
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
          <ion-thumbnail slot="start">
@@ -69,41 +92,74 @@
          </ion-thumbnail>
       </span>
     </ion-item>
-
-    <ion-item class="question" lines="full">
-      <ion-label class="my-label">Recherchez-vous un emploi ?&nbsp;&nbsp;&nbsp;</ion-label>
+    <ion-item class="question" lines="none">
+      <ion-label class="my-label">&nbsp;Recherchez-vous un emploi ?</ion-label>
       <ion-checkbox class="size" color="primary" (click)="falseFormControl.setValue(false)" [formControl]="trueFormControl"></ion-checkbox>
       <ion-label class="box">Oui</ion-label>
-      <ion-checkbox class="size" color="primary" (click)="trueFormControl.setValue(false)" [formControl]="falseFormControl"></ion-checkbox>
+      <ion-checkbox class="size" color="primary" (click)="trueFormControl.setValue(false)" [formControl]="falseFormControl" ></ion-checkbox>
       <ion-label class="box">Non</ion-label>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Type de contrat</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Type de contrat</ion-label>
+      <ion-input type="text" formControlName="contract" clear-input="true" [disabled]="trueFormControl.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.contract">
+        <div class="error-message" *ngIf="validationsForm.get('contract').hasError(validation.type) && (validationsForm.get('contract').dirty || validationsForm.get('contract').touched)
+             && trueFormControl.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Emploi recherché</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Emploi recherché</ion-label>
+      <ion-input type="text" formControlName="job" clear-input="true" [disabled]="trueFormControl.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.job">
+        <div class="error-message" *ngIf="validationsForm.get('job').hasError(validation.type) && (validationsForm.get('job').dirty || validationsForm.get('job').touched)
+             && trueFormControl.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Localisation</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Localisation</ion-label>
+      <ion-input type="text" formControlName="location" clear-input="true" [disabled]="trueFormControl.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.location">
+        <div class="error-message" *ngIf="validationsForm.get('location').hasError(validation.type) && (validationsForm.get('location').dirty || validationsForm.get('location').touched)
+             && trueFormControl.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Rayon</ion-label>
-      <ion-input type="number"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Distance</ion-label>
+      <ion-input type="number" formControlName="milesAway" clear-input="true" [disabled]="trueFormControl.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.milesAway">
+        <div class="error-message" *ngIf="validationsForm.get('milesAway').hasError(validation.type) && (validationsForm.get('milesAway').dirty || validationsForm.get('milesAway').touched)
+             && trueFormControl.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Disponibilité</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Disponibilité</ion-label>
+      <ion-input type="text" minlength="3" maxlength="3" value="OUI/NON" formControlName="free" clear-input="true" [disabled]="trueFormControl.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.free">
+        <div class="error-message" *ngIf="validationsForm.get('free').hasError(validation.type) && (validationsForm.get('free').dirty || validationsForm.get('free').touched)
+             && trueFormControl.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
+    <ion-item lines="none">
       <ion-label class="my-label" position="floating">//PARTIE IMPORT CV//</ion-label>
       <ion-input type="text"></ion-input>
     </ion-item>
@@ -112,65 +168,111 @@
       <ion-label class="my-label">Mon CV</ion-label>
     </ion-item>
 
-    <ion-item lines="full">
+    <ion-item lines="none">
       <span>
          <ion-icon id="delete" name="trash-outline"></ion-icon>
          <ion-thumbnail slot="start">
            <img src="https://gravatar.com/avatar/dba6bae8c566f9d4041fb9cd9ada7741?d=identicon&f=y" alt="avatar de profil"/>
          </ion-thumbnail>
       </span>
-
     </ion-item>
 
-    <ion-item class="question" lines="full">
-      <ion-label class="my-label">Recherchez-vous un logement ?</ion-label>
-      <ion-checkbox class="size" color="primary" (click)="falseFormControl.setValue(false)" [formControl]="trueFormControl"></ion-checkbox>
+    <ion-item class="question" lines="none">
+      <ion-label class="my-label">&nbsp;Recherchez-vous un logement ?</ion-label>
+      <ion-checkbox class="size" color="primary" (click)="falseFormControl1.setValue(false)" [formControl]="trueFormControl1"></ion-checkbox>
       <ion-label class="box">Oui</ion-label>
-      <ion-checkbox class="size" color="primary" (click)="trueFormControl.setValue(false)" [formControl]="falseFormControl"></ion-checkbox>
+      <ion-checkbox class="size" color="primary" (click)="trueFormControl1.setValue(false)" [formControl]="falseFormControl1"></ion-checkbox>
       <ion-label class="box">Non</ion-label>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Transaction</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Transaction</ion-label>
+      <ion-input type="text" formControlName="home" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.home">
+        <div class="error-message" *ngIf="validationsForm.get('home').hasError(validation.type) && (validationsForm.get('home').dirty || validationsForm.get('home').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Type</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Type</ion-label>
+      <ion-input type="text" formControlName="type" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.type">
+        <div class="error-message" *ngIf="validationsForm.get('type').hasError(validation.type) && (validationsForm.get('type').dirty || validationsForm.get('type').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Localisation</ion-label>
-      <ion-input type="text"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Localisation</ion-label>
+      <ion-input type="text" formControlName="sector" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.sector">
+        <div class="error-message" *ngIf="validationsForm.get('sector').hasError(validation.type) && (validationsForm.get('sector').dirty || validationsForm.get('sector').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Rayon</ion-label>
-      <ion-input type="number"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Rayon</ion-label>
+      <ion-input type="number" formControlName="sectorDistance" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.sectorDistance">
+        <div class="error-message" *ngIf="validationsForm.get('sectorDistance').hasError(validation.type) && (validationsForm.get('sectorDistance').dirty || validationsForm.get('sectorDistance').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Surface min</ion-label>
-      <ion-input type="number"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Surface</ion-label>
+      <ion-input  type="texte" formControlName="surface" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.surface">
+        <div class="error-message" *ngIf="validationsForm.get('surface').hasError(validation.type) && (validationsForm.get('surface').dirty || validationsForm.get('surface').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Nombre de pièce(s) min</ion-label>
-      <ion-input type="number"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Nombre de pièces</ion-label>
+      <ion-input  type="number"  formControlName="room" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.room">
+        <div class="error-message" *ngIf="validationsForm.get('room').hasError(validation.type) && (validationsForm.get('room').dirty || validationsForm.get('room').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
-    <ion-item lines="full">
-      <ion-label class="my-label" position="floating">Prix min</ion-label>
-      <ion-input type="number"></ion-input>
+    <ion-item lines="none">
+      <ion-label class="my-label" position="floating">&nbsp;Prix minimum</ion-label>
+      <ion-input type="text"  formControlName="minPrice" clear-input="true" [disabled]="trueFormControl1.value===false"></ion-input>
+    <div class="validation-errors" >
+      <ng-container *ngFor="let validation of validationMessages.minPrice">
+        <div class="error-message" *ngIf="validationsForm.get('minPrice').hasError(validation.type) && (validationsForm.get('minPrice').dirty || validationsForm.get('minPrice').touched)
+             && trueFormControl1.value===true">
+          <ion-icon name="information-circle-outline"></ion-icon> {{ validation.message }}
+        </div>
+      </ng-container>
+    </div>
     </ion-item>
-
     <ion-row>
       <ion-col>
-        <ion-button type="submit" color="secondary" expand="block">Enregistrer</ion-button>
-        <ion-button [routerLink]="['/login']" type="submit" color="medium" expand="block">Déconnexion</ion-button>
+        <ion-button type="submit" color="secondary" expand="block"  [disabled]="!validationsForm.valid || trueFormControl.value===false || trueFormControl1===true">Enregistrer</ion-button>
+        <ion-button [routerLink]="['/login']"  color="medium" expand="block">Déconnexion</ion-button>
       </ion-col>
     </ion-row>
-
   </form>
 </ion-content>
