Update formulaire Tab5 Création dossier "detail" pour afficher les informations complémentaires d'une personne avec routing entre tab1 et detail. Le dossier service contient un fichier user.service.ts qui sert à lier cees deux pages et teste le fonctionnement optimal.

--- a/projet-dev-mobile/src/app/tab1/tab1.page.html
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.html
@@ -14,8 +14,6 @@
   <ion-header collapse="condense" *ngFor="let number of numberContact">
     <ion-title>{{number.numberUser}} profil(s)</ion-title>
   </ion-header>
-
-
   <div class="padding">
     <ion-list *ngFor="let user of users">
 
@@ -23,13 +21,26 @@
         <ion-avatar>
           <img alt="photo" src="assets/img/avatar.png">
         </ion-avatar>
-        <ion-label>
-          <h2> {{user.nom}} {{user.prenom}}  </h2>
+        <ion-label class="short-version">
+          <h2>{{user.nom}} {{user.prenom}}  </h2>
           <p>Responsable Marketing</p>
           <p>57000 Metz </p>
         </ion-label>
+        <ion-item class="arrow" lines="none" button detail="true" ></ion-item>
       </ion-item>
 </ion-list>
   </div>
+  <ion-list lines="none">
+    <ion-item [routerLink]="'/detail/' + user.id" detail="true" *ngFor="let user of userService.users">
+      <ion-avatar>
+        <img alt="photo" src="assets/img/avatar.png">
+      </ion-avatar>
+      <ion-label  class="short-version">
+        <h2>{{user.name}}  </h2>
+        <p>Responsable Marketing</p>
+        <p>57000 Metz </p>
+      </ion-label>
+    </ion-item>
+  </ion-list>
 </ion-content>
 
