--- a/projet-dev-mobile/src/app/tab1/tab1.page.scss
+++ b/projet-dev-mobile/src/app/tab1/tab1.page.scss
@@ -41,3 +41,9 @@ ion-item{
   --ion-border-color: black;
 }
 
+.short-version{
+  display:inline-block;
+}
+ion-item.arrow{
+  font-weight: 800!important;
+}
