--- a/projet-dev-mobile/src/app/detail/detail.page.html
+++ b/projet-dev-mobile/src/app/detail/detail.page.html
@@ -12,7 +12,7 @@
 <div class="padding">
     <ion-item>
       <ion-avatar>
-        <img alt="photo" src="assets/img/avatar.png">
+        <img alt="photo" src="{{user?.img}}">
       </ion-avatar>
       <ion-label class="short-version">
         <h2>{{user?.name}}  </h2>
