Mise à jour de l'onglet tab1 avec le filtrage par saisie dans la barre de recherche. Le décompte des profils se fait en temps réél en fonction des résultats.

--- a/projet-dev-mobile/src/app/detail/detail.page.html
+++ b/projet-dev-mobile/src/app/detail/detail.page.html
@@ -27,6 +27,6 @@
   <p>{{ user?.activity }}</p>
   <h2>Sur la société</h2>
   <p>{{ user?.society }}</p>
-  <ion-button type="submit" color="secondary" expand="block" (click)="maFonction()">Prendre Contact</ion-button>
+  <ion-button type="submit" color="secondary" expand="block">Prendre Contact</ion-button>
 </div>
 </ion-content>
