--- a/projet-dev-mobile/src/app/detail/detail.page.html
+++ b/projet-dev-mobile/src/app/detail/detail.page.html
@@ -4,22 +4,22 @@
       {{ user?.name }}
     </ion-title>
     <ion-buttons slot="start">
-      <ion-back-button defaultHref="/"></ion-back-button>
+      <ion-back-button (click)= "myBackButton()" ></ion-back-button>
     </ion-buttons>
   </ion-toolbar>
 </ion-header>
 <ion-content>
-<div class="padding">
+<div class="padding" >
     <ion-item>
       <ion-avatar>
         <img alt="photo" src="{{user?.img}}">
       </ion-avatar>
       <ion-label class="short-version">
         <h2>{{user?.name}}  </h2>
-        <p>Responsable Marketing</p>
-        <p>57000 Metz </p>
+        <p>{{user?.job}}</p>
+        <p>{{user?.town}} </p>
       </ion-label>
-       <ion-avatar> <ion-icon size="large" name="heart-outline" [color]="user?.likedBy ?'danger'  : 'warning'" name="heart"></ion-icon></ion-avatar>
+       <ion-avatar> <ion-icon (click)="addToFavorite()" size="large" color="{{post.color}}" name="heart"></ion-icon></ion-avatar>
     </ion-item>
   <h2>Présentation</h2>
   <p>{{ user?.description }}</p>
@@ -27,6 +27,6 @@
   <p>{{ user?.activity }}</p>
   <h2>Sur la société</h2>
   <p>{{ user?.society }}</p>
-  <ion-button type="submit" color="secondary" expand="block">Prendre Contact</ion-button>
+  <ion-button type="submit" color="secondary" expand="block" (click)="addToContact()" [disabled]="disableButton" >Prendre Contact</ion-button>
 </div>
 </ion-content>
